# agents

agent-news-digest/: .env.example  DESIGN_SPEC.md  Dockerfile  README.md  deploy_agent_runtime.py  pyproject.toml  requirements.txt  requirements_agent_runtime.txt
agent-news-digest/app/: agent.py  agent_runtime_app.py  config.py  fast_api_app.py  podcast_tools.py  tools.py
agent-news-digest/app/app_utils/: telemetry.py  typing.py
agent-news-digest/tests/eval/evalsets/: basic.evalset.json
deep-research-agent/: README.md  deployment_metadata.json  pyproject.toml
deep-research-agent/app/: agent.py  fast_api_app.py
deep-research-agent/app/app_utils/: telemetry.py  typing.py
deep-research-agent/tests/: test_research.py
gemini-advisor-mcp/: Dockerfile  pyproject.toml  server.py
